# bedrock-world

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: publish.yml
benches/: large_fixture.rs  world_parse.rs
docs/: API.md  BENCHMARKS.md  SURFACE_QUERY_OPTIMIZATION.md  TESTING.md
src/: bedrock_world.rs  chunk.rs  discover.rs  error.rs  level_dat.rs  mcstructure.rs  nbt.rs  nbt_ref.rs  parsed.rs  player.rs  query.rs  storage.rs  surface.rs  world.rs
tests/: fixture_world.rs
tests/fixtures/: README.md
